added passage to insects

--- a/insects.html
+++ b/insects.html
@@ -33,6 +33,9 @@
         <div class="col-md">Isoptera</div>
     </div>
 </div>
-
+<br>
+<p>Because the class of the insect names in div is 'col-md,' which breaks if the screen size is less than
+   992 pixels wide , and class of the letters in div is 'col-sm,' which breaks if the screen size is less 
+   than 768 pixels wide , the insect names break first.</p>
 </body>
 </html>
