--- a/insects.html
+++ b/insects.html
@@ -37,5 +37,23 @@
 <p>Because the class of the insect names in div is 'col-md,' which breaks if the screen size is less than
    992 pixels wide , and class of the letters in div is 'col-sm,' which breaks if the screen size is less 
    than 768 pixels wide , the insect names break first.</p>
+   <h6>Bootstrap's grid system uses a series of containers, rows, and columns to layout and align content. it's built with flexbox and is fully responsive. Bootstrap's grid system can adopt across all six default breakdowns. each of these breakpoints have their own container.</h6>
+    <div class="container">
+        <img src="Nit.jpg" class="img-fluid"  width=400 height=400 alt="Nit">
+        <img src="Dragonfly.jpg"class="img-fluid" width=400 height=400   alt="Dragonfly">
+        <img src="Orchid mantis.jpg" class="img-fluid"  width=400  height=400  alt="Orchid mantis">
+      </div>
+      <div class="container-fluid" style="text-align:center">
+        <a target="_blank" href="Nit.jpg">
+        <img src="Nit.jpg" class="img-thumbnail" alt="Nit">
+        </a>
+        <a target="_blank" href="Dragonfly.jpg">
+        <img src="Dragonfly.jpg"class="img-thumbnail" alt="Dragonfly">
+      </a>
+        <a target="_blank" href="Orchid mantis.jpg">
+        <img src="Orchid mantis.jpg" class="img-thumbnail" alt="Orchid mantis">
+      </a>
+      </div>
+      
 </body>
 </html>
