--- a/insects.html
+++ b/insects.html
@@ -49,6 +49,16 @@ td{
 
   </head>
 <body>
+  <nav class="navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="insects.html">Interesting Insects</a>
+    <button class="navbar-toggler">toggle</button>
+<div class="navbar-collapse" id="navigation bar collapse">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-link active"><a href="basic.html">basic</a></li>
+        <li class="nav-link active"><a href="advanced.html">advanced</a></li>
+    </ul>
+</div>
+  </nav>
 <h1>Insects by lokeshreddy </h1>
 <div class="container">
     <div class ="row">
@@ -165,9 +175,9 @@ td{
       <div class="btn-toolbar" role="group" aria-label="Styling">
     
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-dark">D</button>
-        <button type="button" class="btn btn-dark">O</button>
-        <button type="button" class="btn btn-dark">N</button>
+        <button type="button" class="btn btn-success">D</button>
+        <button type="button" class="btn btn-success">O</button>
+        <button type="button" class="btn btn-success">N</button>
       </div>
       <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-warning">T</button>
@@ -205,11 +215,32 @@ td{
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
-
-      </div>
-    </div>
-   
+        <div class="row">
+          <div class="card" style="width: 18rem;">
+            <img src="Dragonfly.jpg" class="card-img-top" alt="Dragonfly">
+            <div class="card-body">
+              <h5 class="card-title">Dragonfly</h5>
+              <p class="card-text">A dragonfly is a flying insect belonging to the order Odonata, infraorder Anisoptera (from Greek ἄνισος anisos, "unequal" and πτερόν pteron, "wing", because the hindwing is broader than the forewing). About 3,000 extant species of true dragonfly are known. Most are tropical, with fewer species in temperate regions. Loss of wetland habitat threatens dragonfly populations around the world. Adult dragonflies are characterized by a pair of large, multifaceted compound eyes, two pairs of strong, transparent wings, sometimes with coloured patches, and an elongated body. Many dragonflies have brilliant iridescent or metallic colours produced by structural colouration, making them conspicuous in flight. An adult dragonfly's compound eyes have nearly 24,000 ommatidia each</p>
+              <a href="https://en.wikipedia.org/wiki/Dragonfly" class="btn btn-primary">About Insect</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="Orchid mantis.jpg" class="card-img-top" alt="Orchid mantis">
+            <div class="card-body">
+              <h5 class="card-title">Orchid mantis</h5>
+              <p class="card-text">Hymenopus coronatus is a mantis from the tropical forests of Southeast Asia. It is known by various common names including walking flower mantis and (pink) orchid mantis.</p>
+              <a href="https://en.wikipedia.org/wiki/Hymenopus_coronatus" class="btn btn-primary"> About Insect </a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="Trichoptera.jpg" class="card-img-top" alt="Trichoptera">
+            <div class="card-body">
+              <h5 class="card-title">Trichoptera</h5>
+              <p class="card-text">Trichoptera contains about 45 extant families containing some 13,000 described species, with estimates of undescribed (mostly SE Asian) species diversity some four- to fivefold higher. Trichoptera are holometabolous; the moth-like adult has reduced mouthparts lacking any proboscis, but with 3–5 segmented maxillary palps and 3-segmented labial palps. The antennae are multisegmented and filiform and often as long as the wings.</p>
+              <a href="https://www.sciencedirect.com/topics/agricultural-and-biological-sciences/trichoptera" class="btn btn-primary">About Insect</a>
+            </div>
+          </div>
+        </div>
 
 </body>
 </html>
